--- a/Account_/Vip_Cell.xib
+++ b/Account_/Vip_Cell.xib
@@ -9,26 +9,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="Vip_Cell" rowHeight="55" id="XXS-Ml-sEr">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="Vip_Cell" rowHeight="84" id="XXS-Ml-sEr">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XXS-Ml-sEr" id="Jl2-90-xrw">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="5zx-2s-EcJ">
-                        <rect key="frame" x="20" y="6" width="280" height="43"/>
-                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5zx-2s-EcJ">
+                        <rect key="frame" x="8" y="6" width="304" height="72"/>
+                        <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="72" id="P0g-mJ-5pk"/>
+                        </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="8"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFZ-2a-G9K">
-                        <rect key="frame" x="26" y="20" width="268" height="15"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9.000 đ" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFZ-2a-G9K">
+                        <rect key="frame" x="113" y="12" width="94.5" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="Jy4-nW-s5a"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" id="pCo-FC-I5e"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -36,22 +43,65 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vip_corner" translatesAutoresizingMaskIntoConstraints="NO" id="C1E-Cb-CiL">
+                        <rect key="frame" x="6" y="5" width="44" height="41"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="41" id="Gh2-6N-8ov"/>
+                            <constraint firstAttribute="width" constant="44" id="gIi-Ma-YNq"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hor-0C-D1y">
+                        <rect key="frame" x="139" y="45" width="42" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="GNC-wq-IdG"/>
+                            <constraint firstAttribute="height" constant="21" id="l9M-Sd-bUJ"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="14"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vip_icon" translatesAutoresizingMaskIntoConstraints="NO" id="xBG-ka-t7k">
+                        <rect key="frame" x="16" y="9" width="21" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="aNK-wY-EC7"/>
+                            <constraint firstAttribute="width" constant="21" id="ihw-GA-VTP"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vip1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Riw-ev-xJ6">
+                        <rect key="frame" x="13" y="24" width="24" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="AUD-jF-0rc"/>
+                            <constraint firstAttribute="height" constant="14" id="GDT-AY-BEd"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                        <color key="textColor" red="0.11372549019607843" green="0.32156862745098036" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="UFZ-2a-G9K" secondAttribute="trailing" constant="26" id="3QQ-cN-rzI"/>
-                    <constraint firstItem="5zx-2s-EcJ" firstAttribute="leading" secondItem="Jl2-90-xrw" secondAttribute="leading" constant="20" id="IOg-5x-p64"/>
-                    <constraint firstAttribute="bottom" secondItem="5zx-2s-EcJ" secondAttribute="bottom" constant="6" id="Qei-5M-Fw1"/>
-                    <constraint firstItem="UFZ-2a-G9K" firstAttribute="leading" secondItem="Jl2-90-xrw" secondAttribute="leading" constant="26" id="VtT-td-Y70"/>
-                    <constraint firstAttribute="trailing" secondItem="5zx-2s-EcJ" secondAttribute="trailing" constant="20" id="Y1r-qg-YP1"/>
-                    <constraint firstAttribute="bottom" secondItem="UFZ-2a-G9K" secondAttribute="bottom" constant="20" id="kXb-gD-APA"/>
-                    <constraint firstItem="5zx-2s-EcJ" firstAttribute="top" secondItem="Jl2-90-xrw" secondAttribute="top" constant="6" id="ofx-Qw-xd9"/>
-                    <constraint firstItem="UFZ-2a-G9K" firstAttribute="top" secondItem="Jl2-90-xrw" secondAttribute="top" constant="20" id="zua-Rb-Ve2"/>
+                    <constraint firstItem="xBG-ka-t7k" firstAttribute="leading" secondItem="Jl2-90-xrw" secondAttribute="leading" constant="16" id="2NQ-Fi-drB"/>
+                    <constraint firstItem="Hor-0C-D1y" firstAttribute="centerX" secondItem="Jl2-90-xrw" secondAttribute="centerX" id="2dA-i1-1bi"/>
+                    <constraint firstAttribute="bottom" secondItem="5zx-2s-EcJ" secondAttribute="bottom" constant="6" id="3vX-wX-Y7I"/>
+                    <constraint firstItem="UFZ-2a-G9K" firstAttribute="top" secondItem="Jl2-90-xrw" secondAttribute="top" constant="12" id="Jsw-Vq-KAb"/>
+                    <constraint firstItem="Riw-ev-xJ6" firstAttribute="leading" secondItem="Jl2-90-xrw" secondAttribute="leading" constant="13" id="QGj-mt-8h8"/>
+                    <constraint firstItem="5zx-2s-EcJ" firstAttribute="top" secondItem="Jl2-90-xrw" secondAttribute="top" constant="6" id="RUh-NO-oX7"/>
+                    <constraint firstItem="Hor-0C-D1y" firstAttribute="top" secondItem="UFZ-2a-G9K" secondAttribute="bottom" constant="8" symbolic="YES" id="S1p-cj-Cqk"/>
+                    <constraint firstItem="UFZ-2a-G9K" firstAttribute="centerX" secondItem="Jl2-90-xrw" secondAttribute="centerX" id="T2L-PU-sjN"/>
+                    <constraint firstAttribute="trailing" secondItem="5zx-2s-EcJ" secondAttribute="trailing" constant="8" id="Xz1-kd-fjB"/>
+                    <constraint firstItem="xBG-ka-t7k" firstAttribute="top" secondItem="Jl2-90-xrw" secondAttribute="top" constant="9" id="ZkA-KT-65w"/>
+                    <constraint firstItem="C1E-Cb-CiL" firstAttribute="top" secondItem="Jl2-90-xrw" secondAttribute="top" constant="5" id="nZe-ia-GQz"/>
+                    <constraint firstItem="5zx-2s-EcJ" firstAttribute="leading" secondItem="Jl2-90-xrw" secondAttribute="leading" constant="8" id="wke-jn-aOn"/>
+                    <constraint firstItem="Riw-ev-xJ6" firstAttribute="top" secondItem="xBG-ka-t7k" secondAttribute="bottom" constant="1" id="y0L-mg-h21"/>
+                    <constraint firstItem="C1E-Cb-CiL" firstAttribute="leading" secondItem="Jl2-90-xrw" secondAttribute="leading" constant="6" id="zNj-2f-8iq"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="-1.4492753623188408" y="-3.683035714285714"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <point key="canvasLocation" x="-1.4492753623188408" y="6.0267857142857144"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="gradient" width="79.5" height="10.5"/>
+        <image name="vip_corner" width="33" height="28"/>
+        <image name="vip_icon" width="19.5" height="13"/>
     </resources>
 </document>
