--- a/Auth_/PC_Confirm_ViewController.xib
+++ b/Auth_/PC_Confirm_ViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,18 +18,18 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_success" translatesAutoresizingMaskIntoConstraints="NO" id="Xqj-UG-ram">
-                    <rect key="frame" x="142" y="122" width="130" height="130"/>
+                    <rect key="frame" x="122.5" y="122" width="130" height="130"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="130" id="Cda-bn-YQq"/>
                         <constraint firstAttribute="width" constant="130" id="E8z-i7-FZO"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="---" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQA-cR-cxX">
-                    <rect key="frame" x="20" y="273" width="374" height="24"/>
+                    <rect key="frame" x="20" y="273" width="335" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="jgf-Ot-Ket"/>
                     </constraints>
@@ -38,7 +38,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="---" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clG-SF-f9z">
-                    <rect key="frame" x="20" y="321" width="374" height="24"/>
+                    <rect key="frame" x="20" y="321" width="335" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="aYn-ic-30U"/>
                     </constraints>
@@ -47,7 +47,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a4h-Eg-EAi">
-                    <rect key="frame" x="20" y="385" width="374" height="52"/>
+                    <rect key="frame" x="20" y="385" width="335" height="52"/>
                     <color key="backgroundColor" red="0.14117647059999999" green="0.4039215686" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="52" id="oSt-FX-MuS"/>
@@ -65,6 +65,17 @@
                         <action selector="didPressBack" destination="-1" eventType="touchUpInside" id="Qnk-nu-ahI"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bFc-0S-ter">
+                    <rect key="frame" x="129.5" y="517" width="116" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="3DS-dQ-FI3"/>
+                        <constraint firstAttribute="width" constant="116" id="Xk1-hh-xKj"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                    <state key="normal" title="Huỷ giao dịch">
+                        <color key="titleColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -80,14 +91,16 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="clG-SF-f9z" secondAttribute="trailing" constant="20" id="aqF-RE-2ns"/>
                 <constraint firstItem="clG-SF-f9z" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="e0B-aU-Nqx"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="a4h-Eg-EAi" secondAttribute="trailing" constant="20" id="eLa-2x-FSW"/>
+                <constraint firstItem="bFc-0S-ter" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="fw0-Wq-WiE"/>
                 <constraint firstItem="clG-SF-f9z" firstAttribute="top" secondItem="sQA-cR-cxX" secondAttribute="bottom" constant="24" id="kBo-jr-OVd"/>
                 <constraint firstItem="a4h-Eg-EAi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="lja-Rr-5iz"/>
+                <constraint firstItem="bFc-0S-ter" firstAttribute="top" secondItem="a4h-Eg-EAi" secondAttribute="bottom" constant="80" id="wm3-pg-4fh"/>
             </constraints>
             <point key="canvasLocation" x="79.710144927536234" y="71.739130434782609"/>
         </view>
     </objects>
     <resources>
-        <image name="ico_success" width="66.666664123535156" height="66"/>
+        <image name="ico_success" width="66.5" height="65.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
